--- a/index.html
+++ b/index.html
@@ -4,34 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+
     <title>Conversor</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="box">
+    <div class="page">
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Converter
+            </button>
+            <div class="dropdown-menu from" aria-labelledby="dropdownMenuButton">
+
+            </div>
+        </div>
+        <div class="container ">
             <p class="title">Conversor de Moedas</p>
-            <div class="flags">
-                <div class="flag1"></div>
-                <div class="flag2"></div>
+            <div class="box">
+                <div class="flags">
+                    <div class="flag1">
+                        <img class="flag1Img">
+                    </div>
+                    <div class="flag2">
+                        <img class="flag2Img">
+                    </div>
+                </div>
+
+                <div class="quant">
+                    <div class="input-group mb-1 mr-5 left">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text-from" id="basic-addon1"></span>
+                        </div>
+                        <input type="number" class="form-control-from" placeholder="Quant." aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group mb-1 ml-5">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text-to" id="basic-addon1"></span>
+                        </div>
+                        <input type="number" class="form-control-to" readonly aria-describedby="basic-addon1">
+                    </div>
+                </div>
+                <div class="conversor">
+                    <button class="button">Converter</button>
+                </div>
             </div>
-            <div class="menu-dropdown">
-                Converter:
-                <div class="dropdown-menu1">menu dropdown1</div>
-                Em:
-                <div class="dropdown-menu2">menu dropdown2</div>
-            </div>
-            <div class="quant">
-                <input type="number" name="" class="inputQuant">
-                <input type="number" name="" class="inputConvert">
-            </div>
-            <div class="conversor">
-                <button class="button">Converter</button>
+        </div>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Em
+            </button>
+            <div class="dropdown-menu to" aria-labelledby="dropdownMenuButton">
+
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
